# tcc-fcm

./: .gitignore  Análise.ipynb  README.md  fcm.py  hullermeier.py  pyproject.toml  requirements.txt
Resultados/: resultado_geral.csv
Resultados 1/: resultado_geral.csv
Resultados 1/resultado_agregado/obs_10/: experimento_dimensao_16_expoente_fuzzy_22.775.csv  experimento_dimensao_16_expoente_fuzzy_8.325.csv  experimento_dimensao_4_expoente_fuzzy_1.1.csv  experimento_dimensao_4_expoente_fuzzy_22.775.csv
Resultados 1/resultado_agregado/obs_100/: experimento_dimensao_4_expoente_fuzzy_22.775.csv  experimento_dimensao_8_expoente_fuzzy_8.325.csv
Resultados 1/resultado_agregado/obs_30/: experimento_dimensao_16_expoente_fuzzy_1.1.csv  experimento_dimensao_16_expoente_fuzzy_15.55.csv  experimento_dimensao_16_expoente_fuzzy_22.775.csv  experimento_dimensao_4_expoente_fuzzy_30.0.csv  (+2 more)
exp_antigo/experimento/: experimento_dimensao_2_obs_10.csv  experimento_dimensao_2_obs_100.csv
exp_antigo/experimento_10/: experimento_dimensao_2_obs_10.csv
exp_antigo/experimento_100/: experimento_dimensao_2_obs_100.csv
exp_antigo/experimento_1000/: experimento_dimensao_2_obs_1000.csv
resultados/experimento_10/: experimento_10.csv
src/: agregado.py  analise.py  bases.py  experimento.py  experimento_10.py  experimento_100.py  experimento_1000.py  experimento_10000.py  experimento_task.py  fcm.py  formatacao.py  hullermeier.py  inicializacao.py  parametros.py  plot.py  soma.py  tasks.py  utils.py
src/experimento_10000/: experimento_dimensao_2_obs_10000.csv
tests/: test_fcm.py
(+312 files in other folders)
