[tool.poetry]
name = "fcm"
version = "0.1.0"
description = ""
authors = ["Anderson Alencar <alencarbarros@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
numba = "^0.57.0"
pyqt5 = "^5.15.9"
pytest = "^7.3.1"
mpmath = "^1.3.0"
fuzzy-c-means = "^1.7.0"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
