[tool.poetry]
name = "fcm"
version = "0.1.1"
description = ""
authors = ["Anderson Alencar <alencarbarros@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
numba = "^0.57.0"
pyqt5 = "^5.15.9"
pytest = "^7.3.1"
mpmath = "^1.3.0"
fuzzy-c-means = "^1.7.0"
pandas = "^2.0.2"
celery = {extras = ["redis"], version = "^5.3.0"}
python-decouple = "^3.8"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
